# rax

./: .gitignore  Cargo.toml  Makefile  README.md  initrd.img  run.sh
docs/: aam.txt  aas.txt  adcx.txt  addss.txt  aesdec.txt  aesdec128kl.txt  aesdecwide128kl.txt  aesencwide256kl.txt  aesimc.txt  andnpd.txt  blendpd.txt  blendvpd.txt  blendvps.txt  blsmsk.txt  bndmk.txt  bndmov.txt  bound.txt  bsf.txt  bsr.txt  btc.txt  bts.txt  bzhi.txt  clac.txt  cld.txt  clflush.txt  clflushopt.txt  clrssbsy.txt  cmc.txt  cmppd.txt  cmpsd.txt  cmpxchg.txt  comiss.txt  cpuid.txt  crc32.txt  cvtdq2ps.txt  cvtps2pd.txt  cvttpd2dq.txt  divpd.txt  divps.txt  divsd.txt  (+215 more)
docs/hardware/: pit.txt
docs/x86-spec/: aaa.txt  add.txt  addpd.txt  addps.txt  adox.txt  aesenc128kl.txt  aesenc256kl.txt  aesenclast.txt  aeskeygenassist.txt  andn.txt  andnps.txt  andps.txt  arpl.txt  bextr.txt  blsi.txt  blsr.txt  bndcl.txt  bndldx.txt  bndstx.txt  bt.txt  btr.txt  call.txt  capabilities.txt  cldemote.txt  clts.txt  cmp.txt  cmpps.txt  cmpss.txt  comisd.txt  cvtsd2si.txt  (+149 more)
examples/: config.toml  run_microkernel.rs  run_test.rs
initrd_root/: init
microkernel/: Cargo.toml  Makefile  build.rs  linker.ld
src/: config.rs  error.rs  lib.rs  main.rs  memory.rs  snapshot.rs  timing.rs  trace.rs  vmm.rs
tests/: adc.rs  add.rs  and.rs  arm.rs  arm_bitops.rs  arm_execution.rs  asm_instructions.rs  cmp.rs  dec.rs  div.rs  hexagon_bare_metal.rs  idiv.rs  imul.rs  inc.rs  kvm_minimal.rs  mul.rs  neg.rs  sbb.rs  sub.rs  x86_64.rs
tools/asl-parser/asl-parser-rs/: Cargo.toml  README.md
tools/asl-parser/asl-parser-rs/generated_tests/: extract_all_tests.py  extract_oracle_tests.py  run_all_qemu.py  run_all_qemu.sh  run_arm32_qemu.py  run_qemu_baremetal.sh  run_qemu_batch.py  run_qemu_tests.sh  validate_with_qemu.sh
tools/asl-parser/asl-parser-rs/src/: error.rs  lexer.rs  lib.rs  main.rs  parser.rs  span.rs  syntax.rs
tools/asl-parser/asl-parser-rs/src/parser/: defs.rs  expr.rs  instr.rs  regs.rs  stmt.rs  types.rs
tools/asl-parser/asl-parser-rs/src/testgen/: mod.rs  qemu.rs  sysreg.rs  types.rs
tools/asl-parser/asl-parser-rs/src/testgen/analysis/: decode.rs  encoding.rs  mod.rs  semantic.rs
tools/asl-parser/asl-parser-rs/src/testgen/generator/: boundary.rs  encoding.rs  execution.rs  mod.rs
tools/asl-parser/asl-parser-rs/src/testgen/oracle/: eval.rs  mod.rs
tools/asl-parser/asl-parser-rs/src/testgen/output/: mod.rs  rust.rs  structured.rs
tools/asl-parser/asl-parser-rs/src/xml/: download.rs  instrs.rs  mod.rs  regs.rs  shared.rs
tools/asl-parser/asl-parser-rs/tests/: parse_defs.rs  parse_regs.rs
(+2549 files in other folders)
